# paste-share

./: .gitignore
backend/: pyproject.toml
backend/pasteShare_django/: manage.py
backend/pasteShare_django/pasteShare_django/: asgi.py  settings.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.cjs
frontend/src/: App.svelte
frontend/src/components/: Editor.svelte  Navbar.svelte
frontend/src/pages/: Home.svelte  ProtectedRoute.svelte  ProtectedRouteGuard.svelte  SignIn.svelte  SignUp.svelte
frontend/src/utils/: stores.js  toasts.js
frontend/src/views/: Home.svelte
