[tool.poetry]
name = "pasteShareBackend"
version = "0.1.0"
description = ""
authors = ["bartosz121 <bmagiera121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
djoser = "^2.1.0"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
